--- a/PS1zxcorr/notebook/PS1.ipynb
+++ b/PS1zxcorr/notebook/PS1.ipynb
@@ -562,7 +562,8 @@
     "                subtab = subjobs.quick(subquery, task_name=\"python cone search\")\n",
     "                accept = False\n",
     "            except Exception:\n",
-    "                time.sleep(60)\n",
+    "                from time import sleep
+    "                sleep(60)\n",
     "                pass\n",
     "   \n",
     "        subtab    = fixcolnames(ascii.read(subtab))\n",
